--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <div class="logo">
                     <img class="logo-img" src="https://images.squarespace-cdn.com/content/v1/5e7eab9fcc76e2321541f8b3/a18ba2dd-becb-48d9-baf3-744e25a20e87/Doggo512Icon.png?format=1500w" alt="KibblesTasty">
                 </div>
-                <span class="logo-text">Crafting Kibblestasty Loot Generator</span>
+                <span class="logo-text only-desktop">Crafting Kibblestasty Loot Generator</span>
             </div>
             <div class="options">
                 <div class="btn btn-round" id="add-creature-btn">
